p3-semantics/tests/ReturnProc.mj
proc a(): char { return 'a'; }
proc aa(): proc ():char { return a; }
{
  proc b(): char { return 'b'; }
  proc bb(): proc(): char { return b; }
}